# Death-Analysis

./: LICENSE  README.md  all__results.ipynb  pyproject.toml
src/death_analysis/: __main__.py  data_summary.py  eda.py  inference.py
