[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Analysis-of-death-by-selected-causes-from-2014-to-2019"
authors = [{name = "Arun Mathew", email = "amathew5@mail.yu.edu"}]
version = "0.1.0"
description = "analysis of monthly death counts from 2014 to 2019"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.4",
    "numpy>=1.21",
    "pandas>=1.3",
    "seaborn>=0.11",
    "scikit-learn>=1.3.0"
]

[project.urls]
homepage = "https://github.com/ArunMathew7"
repository = "https://github.com/ArunMathew7/Analysis-of-death-by-selected-causes-from-2014-to-2019"
documentation = "https://github.com/ArunMathew7/Analysis-of-death-by-selected-causes-from-2014-to-2019/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]